--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <meta http-equiv="refresh" content="2;url=https://mymontessoriwork.com">
       <meta name="viewport" content="width=device-width,initial-scale=1"/>
       <meta name="description" content="Virtual Montessori Lessons"/>
-      <title>my&#8226;montessori</title>
+      <title>Redirecting...</title>
     </head>
     <body>
       <noscript>You need to enable JavaScript to run this app.</noscript>
